name:                hasq
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/hasq#readme
license:             BSD3
license-file:        LICENSE
author:              Isaac Carruthers
maintainer:          isaac.carruthers@gmail.com
copyright:           2015 Isaac Carruthers
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src, src/Hasq
  exposed-modules:     Hasq
  other-modules:       Konnect, KParse, KTypes
  ghc-options:         -XOverloadedStrings
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , vector
                     , network
                     , binary
                     , data-binary-ieee754
  default-language:    Haskell2010

executable hasq-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -XOverloadedStrings
  build-depends:       base
                     , hasq
                     , bytestring
  default-language:    Haskell2010

test-suite hasq-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hasq
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/carrutstick/hasq
